# semantic-code-search

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
contracts/: repo_bundle.md  repo_bundle.schema.json
crates/codesearch-cli/: Cargo.toml
crates/codesearch-cli/src/: api.rs  bundle.rs  chunking.rs  cli.rs  config.rs  file_types.rs  lib.rs  main.rs  repo_scan.rs
sql/migrations/: 001_init.sql  002_local_repo_identity.sql
src/app/: __init__.py  main.py
src/app/api/: routes.py
src/app/core/: auth.py  config.py  container.py  supabase.py
src/app/models/: api.py
src/app/repositories/: __init__.py  supabase_repository.py
src/app/services/: auth_service.py  embedding.py  github_ingest.py  ingestion.py  local_bundle.py  worker.py
src/common/: __init__.py  bundle.py  chunking.py  file_types.py  repo_scan.py  schemas.py
tests/integration/: test_supabase_integration.py
tests/unit/: test_api.py  test_auth.py  test_bundle_contract.py  test_chunking.py  test_embedding.py  test_ingestion.py  test_repository.py
