[package]
name = "codesearch"
version = "0.1.0"
edition = "2021"
description = "Rust CLI for semantic code search indexing and querying."

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.11"
directories = "5.0"
flate2 = "1.0"
git2 = "0.20"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43", features = ["macros", "rt-multi-thread"] }
tree-sitter = "0.25"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"
uuid = { version = "1.12", features = ["serde", "v4"] }
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.15"
